bug: Remove hyphens:auto
Think ths doesn't look good when reading on body text

--- a/_sass/base.body.scss
+++ b/_sass/base.body.scss
@@ -2,7 +2,6 @@ body {
     background: $colour-grey;
     color: $colour-space-grey;
     font: normal #{$font-size} / #{$line-height} $font-family;
-    hyphens: auto;
     margin: 0 auto;
     max-width: $container-width;
     text-rendering: optimizeLegibility;
